add more content for sessions and bios, updated header image.

--- a/site/content/events/vive2022.md
+++ b/site/content/events/vive2022.md
@@ -30,8 +30,40 @@ eventSessions:
   - timeslot: 1:00 PM — 1:20 PM EST
     topic: 'Consumer attitudes toward Conversational AI, and what they mean for today’s Health and Wellness Providers'
     presenters:
-        - name: Jon Stine, Executive Director of Open Voice Network for The Linux Foundation
-        - name: James Poulter, CEO, Vixen Labs       
+        - name: 'Jon Stine, Executive Director of Open Voice Network for The Linux Foundation'
+        - name: 'James Poulter, CEO, Vixen Labs'   
+  - timeslot: 1:30 PM — 1:50 PM EST	
+    topic: 'Voice, Sensors, AI: Emerging Tech for Health'  
+    presenters:
+        - name: 'Daniel Kraft, MD | Chair, XPRIZE Pandemic Alliance Task Force and Founder of Exponential Medicine'
+        - name: 'Dr. David Metcalf, Director, METIL.org, UCF Institute for Simulation and Training'
+  - timeslot: 2:00 PM — 2:50 PM EST	
+    topic: 'Voice Data Analysis: Overcoming Privacy and Ethical Barriers to Build User Trust'
+    presenters:
+        - name: 'Oita Coleman, Senior Advisor, Open Voice Network'
+        - name: "Henry J. O'Connell, Chief Executive Officer, Canary Speech, LLC"
+        - name: 'Dr. Yared Alemu, Founder & CEO, TQINTELLIGENCE, Inc.'
+        - name: 'Nick Myers, Co-Founder & CEO, RedFox AI'
+        - name: 'Dr. David Metcalf, Director, METIL.org, UCF Institute for Simulation and Training'
+  - timeslot: 3:15 PM — 3:50 PM EST	
+    topic: "Voice, Health, & Well-Being for Older Adults: The Opportunity"
+    presenters:
+        - name: 'Laurie Orlov, Founder, Aging & Health Technology Watch'
+        - name: 'Ginna Baik, Senior Living Alexa Smart Properties Leader, Amazon'    
+        - name: 'Amy Stapleton, CEO & Cofounder, Chatables'
+        - name: 'Jonathan E. Ramaci, Founder & Managing General Partner, Great Product, Inc.; Founder & CEO, Wellnest'
+        - name: 'Maarten Lens-FitzGerald, Project Zilver'
+  - timeslot: 4:00 PM — 4:20 PM EST	
+    topic: 'Building Trust Through Transparency with Data Security and Confidentiality'	
+    presenters:
+        - name: "Henry J. O'Connell, Chief Executive Officer, Canary Speech, LLC" 
+  - timeslot: 4:30 PM — 5:00 PM EST	
+    topic: 'Towards Racially-Inclusive Voice Interfaces'	
+    presenters:
+      - name: 'Freddie Feldman, Director, Voice & Conversational Interfaces, Wolters Kluwer Health - Clinical Effectiveness'
+      - name: 'Harry Pappas, Founder & CEO, Intelligent Health Association'
+      - name: 'Dr. David Metcalf, Director, METIL.org, UCF Institute for Simulation and Training'
+              
 eventRegistrationCallToActionImgUrl: /img/open-voice-network-ovon-events-voice-and-ai-technology-forum-vive-2022-register-now.png
 eventRegistrationCallToActionText: Use code vive22_ovn150 for $150 off your registration.
 eventRegistrationCallToActionUrl: https://www.viveevent.com/register
@@ -48,6 +80,55 @@ eventParticipantBios:
   - name: Ginna Baik | Senior Living Alexa Smart Properties Leader, Amazon
     bio: Ginna has had over a decade in senior care and technology with a mission to provide scalable technology and services to underserved populations. She has worked with a social platform startup to leading innovation and resident technology with a national senior care provider, and most recently building the senior care business practice at a national technology solution provider. With her new role at Amazon, she is leading Alexa smart properties business focused on senior living. Her experience includes the deployment of internet cafes at Atlanta Housing Authority properties, leading national resident tech strategy at Emeritus Senior Living (now Brookdale), and advising hundreds of leading senior care providers from life path communities to all levels of care. Ginna is an executive board member at America’s Society on Aging and the Chairman of the board at OATS (Older Adults Tech Services), an affiliate of AARP.
     photoUrl: /img/bio/ginna-baik.jpg
+  - name: Harry P. Pappas | Founder & CEO, Intelligent Health Association
+    bio: 'Pappas is a successful, High Tech. Serial entrepreneur with a strong focus on the health technology sector. He is a strong believer in applying technology to transform the health and wellness community in today’s “continuum of care." Pappas firmly believes that the world of digital health is being driven by the adoption of technology, and therefore drives the need for quality, ongoing education. Harry is an internationally recognized speaker and thought leader with auto-ID, BLE, NFC, RFID, RTLS, sensors, voice, robotics, wearables, AI, blockchain, and wireless technologies. Pappas is the Founder & CEO of the Intelligent Health Association, a global organization dedicated to helping educate members of the healthcare community on the adoption of new technologies that can improve patient care, patient outcomes, and patient safety while driving down the cost of healthcare. Harry is also an Ambassador in the Open Voice Network (OVON), overseeing their Health, Wellness, and Life Sciences Community. He is a long-term strategic player in the world of health technologies for the digital hospital and for today’s smart home. Harry’s goal: to help educate the healthcare community on an ongoing basis, so that it may adopt new technology that can have a dramatic impact on the delivery of improved health. His mantra: "Help Others, Do SOCIAL GOOD."'
+    photoUrl: /img/bio/harry-pappas.jpg
+  - name: "Henry J. O'Connell | Chief Executive Officer, Canary Speech, LLC"
+    bio: "Henry has executive and C-level experience. He began his career after graduate school working at the National Institutes of Health in a neurological disease group, but went on to a business career for the last 25 years.
+  - Worked at NIH in NINCDS after graduate school
+  - Successfully accomplished several turnarounds in the tech space
+  - Twenty years of C-level corporate management experience
+  - Gilson, HP, and Moxtek, among others
+  - Board of Director experience, serving in both the private and public sectors
+  - He has worked worldwide, managing companies in North America, Europe, and Asia
+  - Founder and CEO of Canary Speech, LLC"
+    photoUrl: /img/bio/henry-oconnell.png
+  - name: James Poulter | CEO, Vixen Labs	
+    bio: AI and voice technology expert and future of work and innovation culture speaker, James is the founder and CEO of Vixen Labs. James is a seasoned marketer and communications professional with over ten years of experience. He previously was the Head of The LEGO Group’s Emerging Platforms & Partnerships team and the Head of Social Media for LEGO’s social network for Kids, LEGO Life—which launched globally in 2017 and has since grown to over 2M active users as the world’s first global and safe social network for kids. As well as devising and developing social features, such as LEGO Life’s emoji keyboard, custom characters, and moderation systems, James oversaw the launch of LEGO’s global partnership with GIPHY—leading the LEGO channel to accrue over 1B GIF views in its first year. Prior to joining LEGO, James worked for several of the world’s leading marketing, advertising, and public relations firms, including Edelman and Ogilvy, leading digital marketing, mobile, and social campaigns both in EMEA and globally, as well as new business efforts for clients such as Diageo, Unilever, Bose, PayPal, HP, and Adobe. Outside of work James is an advisor to the Church of England’s digital board, as well as several other charities and startups. James is also the host of the show “Signal” for MediaNet, which explores the intersection between faith, media, and technology.
+    photoUrl: img/bio/james-poulter.png
+  - name: Jon Stine | Executive Director, Open Voice Network	
+    bio: Jon is the Executive Director of the Open Voice Network (OVON), the Linux Foundation community dedicated to the development of technical standards and usage guidelines for the emerging world of voice assistance. Prior to OVON, Jon served in global executive roles for the Intel Corporation and Cisco Systems. He lives in Portland, Oregon.
+    photoUrl: img/bio/jon-stine.png
+  - name: Jonathan E. Ramaci | Founder & Managing General Partner, Great Product, Inc.; and Founder & CEO of Wellnest	
+    bio: Jonathan Ramaci a serial entrepreneur who has founded seven companies, grown them to scale, and seen them through to multi-million dollar acquisitions. He he led the technology consulting practice at Oracle for a large segment of the United States. Mr. Ramaci later founded and was CEO of iCache, where he pioneered and patented the biometric hardware and software applications now seen in TouchID used by Apple. He was also featured on the London Stock Exchange and was awarded the LSE’s Innovator of the Year Award. As the Chief Product and Design Officer of LoopPay, he was instrumental in raising the company’s initial $10M of equity funding, as well as its acquisition by Samsung for $240M. Mr. Ramaci founded Elements of Genius, where he strategizes with Fortune 500 clients to unlock their innovation potential—including Samsung, Oracle, Amazon, AT&T, and many others. Mr. Ramaci is the Managing General Partner of Great Product, Inc., whose mission is to identify, nurture, and grow European health tech companies in the US. He is also ANGI’s Italian Ambassador for Innovation to the United States. Jonathan holds multiple patents and is an extensively published thought leader. Committed to developing talent, he regularly mentors university students and entrepreneurs. Mr. Ramaci holds degrees and certifications from The Citadel and the Massachusetts Institute of Technology (MIT).
+    photoUrl: img/bio/jonathan-ramaci.jpeg
+  - name: Laurie M. Orlov | Tech industry veteran, writer, speaker and elder care advocate, founder of Aging and Health Technology Watch. 
+    bio: "Laurie has spent many years in the technology industry, including nine years at analyst firm Forrester Research. She has spoken regularly and delivered keynote speeches at forums, industry consortia, conferences, and symposia—most recently on the business of technology for boomers and seniors. She advises large organizations, as well as non-profits and entrepreneurs, about trends and opportunities in the age-related technology market. Her perspectives have been quoted in the Wall Street Journal, the New York Times, Vox, Senior Housing News, CNN Health, and Consumer Reports. She has a graduate certification in Geriatric Care Management from the University of Florida and a BA in Music from the University of Rochester. Her advisory clients have included AARP, Argentum, Bose, CDW, Microsoft, Novartis, Philips and many others. Her latest reports include: Beyond DIY: The Future of Smart Homes and Older Adults 2021, The Future of Wearables and Older Adults 2021, The 2021 Market Overview of Technology for Aging, The Future of Remote Care Technology 2020, Voice, Health and Wellbeing 2020, and The Future of Voice First Technology and Older Adults. Laurie has been named one of the Top 50 Influencers in Aging by Next  Avenue and as one of the women leading global innovation on Age Tech 2020."
+    photoUrl: img/bio/laurie-orlov.jpg
+  - name: Nick Myers | Co-Founder & CEO, RedFox AI
+    bio: Nick is the Co-Founder & CEO of RedFox AI, headquartered in Madison, Wisconsin. RedFox AI is the creator of V Lab, a conversational artificial intelligence (accessible via your smartphone) that facilitates at-home medical tests for patients in the most accurate and efficient way possible—all while offering a new level of on-demand customer support. Nick is a TEDx and International Keynote Speaker, having spoken at events and conferences across the U.S and around the world on artificial intelligence and the future of work, data privacy, and the impact of voice-enabled technologies on future human-to-machine and machine-to-human interactions. Nick has been featured in publications including PR Daily, In Business Madison, and the Journal of Digital and Social Media Marketing. In 2019, RedFox AI was recognized as a "50 on Fire" company in the state of Wisconsin by Wisconsin Inno. Nick is a "40 Under 40" award winner and was nominated as Voice Commentator of The Year at the 2020 Project Voice Awards.
+    photoUrl: img/bio/speakers-nick-myers.png
+  - name: Oita C. Coleman | Senior Advisor at the Open Voice Network
+    bio: Oita Coleman is a performance-driven executive with 30+ years in the tech industry. Skilled in cultivating relationships and leveraging talent and resources to create exemplary teams, she is highly effective in building global partnerships to create innovative solutions to complex challenges. Oita is a former R&D Vice President of Software Quality at SAS Institute, with oversight of implementation of global processes, standards, and policies for the software development life cycle. She is now serving as Senior Advisor at the Open Voice Network, where she leads the privacy, security, and ethical use portfolios focused on voice-specific guidance for both the protection of individual and commercial user data privacy and security for consumer-facing enterprises worldwide. Her life motto is "to whom much is given, much more is required," which fuels her desire to give back. Her passion is helping to inspire the next generation of STEM knowledge professionals—focusing on advancing educational and career development opportunities for underrepresented minorities and women in STEM disciplines. She was recognized as a Top 50 Most Powerful Women in Tech award recipient by the National Diversity Council. She received the inaugural Great Place to Work® For All™ Leadership Award, recognizing women leaders from the FORTUNE 100 Best Companies to Work For. Her efforts were also recognized by US Black Engineer & IT Magazine as “Women Who Make a Difference in Technology."
+    photoUrl: img/bio/speakers-oita-coleman.jpg
+  - name: Tom Lawry | National Director for AI, Health & Life Sciences	
+    bio: "Tom serves as National Director of AI for Health & Life Sciences at Microsoft and previously served as Director of Worldwide Health. He works with providers, payors, and life science organizations in planning and implementing innovative solutions that improve the quality and efficiency of health services delivered around the globe. Tom focuses on strategies for digital transformation applied to performance optimization, including artificial intelligence, machine learning, and cognitive services. He previously served as Director of Organizational Performance for Microsoft’s health incubator (Health Solutions Group). Prior to Microsoft, Tom served as a Senior Director at GE Healthcare, with global responsibilities for revenue cycle analytics and operational performance solutions. Lawry was founder and CEO of Verus, a healthcare software company named as one of the Top 100 Fastest Growing Washington Companies for three consecutive years and to the Deloitte Fast 500 Technologies list. For twelve years Lawry served in various executive management roles in hospitals and integrated delivery networks. He has published numerous articles on using technology to innovate healthcare. His new book, Artificial Intelligence in Healthcare: A Leader’s Guide to Winning in the New Age of Intelligent Health Systems, is a HIMSS 2020 Bestseller."
+    photoUrl: img/bio/Yaa-Kumah-Crystal.jpg
+  - name: Dr. Yaa Kumah-Crystal | Assistant Professor of Biomedical Informatics and Pediatric Endocrinology, Vanderbilt University Medical Center (VUMC)	
+    bio: Dr. Kumah-Crystal’s research focuses on studying communication and documentation in healthcare and developing strategies to improve workflow and patient care delivery. Dr. Kumah-Crystal is the project lead for the Vanderbilt EHR Voice Assistant (VEVA) initiative to incorporate voice user interfaces and ambient scribe technology into the EHR through natural language processing. Dr. Kumah-Crystal is the HealthIT Clinical Director for the VUMC Telehealth Taskforce and works to develop and implement strategies to leverage remote patient care models. She remains clinically active and also supervises pediatric residents and fellows. Dr. Kumah-Crystals related publications define the use of technology to improve care and communication for providers and patients.
+    photoUrl: img/bio/james-poulter.png
+  - name: "Teri Fisher | BSc, BEd, MSc, MD, CCFP(SEM), DipSportMed, Founder, Editor & Host, The Voice Den & Voice in Canada | #VoiceFirst Physician, Podcaster, Author, Clinical Assistant Professor"    
+    bio: Dr. Teri Fisher, dubbed “The Voice Doctor,” is a unique blend of award-winning TEDx and keynote performer, physician, podcaster, author, educator, and leading authority on all things voice technology. Teri, known for his laid-back, friendly, personable, and upbeat style, breaks down the complexities of voice technology to its simplest parts and is your guide to navigating the world of voice. A Sport & Exercise Physician and Clinical Assistant Professor, Teri is also the creator and host of The Voice Den, a revolutionary online voice technology reality show that combines his passions for voice technology and education in a fun, relaxed, and entertaining style. A Voicebot 2020 “Top 17 Influencer in Voice,” Soundhound “Top 40 Voice AI Influencer," host of the Project Voice 2020 “Flash Briefing of the Year,” finalist for the 2020 “Voice AI/Commentator of the Year,” 2019 “Commentator of the Year,” Alexa Champion, and Bixby Premier Developer, Teri is a leader in voice technology around the globe.
+    photoUrl: img/bio/speakers-Teri-Fisher.png
+  - name: Yared Alemu, Ph.D. | Founder & CEO, TQINTELLIGENCE, Inc.
+    bio: Dr. Alemu has over twenty years of experience as a psychologist, researcher, and administrator, including running one of the largest community behavioral healthcare organizations in the world. Dr. Alemu left his administration position and founded TQIntelligence, which uses innovative voice recognition technology and AI for objectively measuring psychiatric symptom severity. The technology is intended to systematically track treatment outcomes, including voice-based remote monitoring of high-risk patients for affordable quality mental health services.
+    photoUrl: img/bio/yared-alemu.jpg
+  - name: Maarten Lens-FitzGerald | Director Project Zilver & Voice Evangelist
+    bio: 'As founder of Project Zilver, Maarten empowered older adults with voice technology by enabling the giveaway of 10,000 smart speakers at the start of the COVID pandemic, as well as creating the first large research into voice and older adults. As a leading innovation executive, Maarten instigates movements that shape the future. He helps many leading organizations in media, health(care), and other categories with exploration, strategy, and product development for the new conversational channel. His latest role is director of the Dutch Voice Coalition, which develops speech technology for the Dutch language as a healthy public-private collaboration—open, trusted, inclusive, and sovereign. Maarten is the author of "Voice: insights and opportunities with the conversational revolution," and he is also an ambassador of the Open Voice Network—the global voice standards organization that is an open source association of The Linux Foundation. Maarten is also a frequent event host, keynote speaker, and taco maker.'
+    photoUrl: img/bio/Maarten-Lens-FitzGerald.png
+  - name: Daniel Kraft, MD | Chair, XPRIZE Pandemic Alliance Task Force and Founder of Exponential Medicine 	
+    bio: Daniel Kraft is a Stanford- and Harvard-trained physician-scientist, inventor, entrepreneur, and innovator. With over twenty-five years of experience in clinical practice, biomedical research, and healthcare innovation, Daniel recently founded Digital.Health, is on the board of Healthy.io and advises several Fortune-50 and digital health-related startups. Daniel is a member of the Inaugural (2015) class of the Aspen Institute Health Innovators Fellowship and is a member of the Kaufman Fellows Society (Class 13). Daniel serves as the Chair of the XPRIZE Pandemic and Health Alliance Task Force. Kraft has served as faculty chair for Medicine at Singularity University since its inception in 2008, and is founder and chair of Exponential Medicine, a program that explores convergent, rapidly developing technologies and their potential in biomedicine and healthcare. Daniel is often called upon to speak to the future of health, medicine, and technology, has given four TED and two TEDMED Talks and has delivered keynotes to a diverse array of organizations. He has multiple scientific publications (including in Nature and Science) and medical device, immunology, and stem cell-related patents through NIH-funded faculty positions with Stanford University School of Medicine and as clinical faculty for the pediatric bone marrow transplantation service at the University of California San Francisco.
+    photoUrl: img/bio/daniel-kraft.jpeg
 eventSponsors:
   - name: About OVON
     details: The Open Voice Network (OVON), an open source association of The Linux Foundation, seeks to make voice technology worthy of user trust—a task of critical importance as voice emerges as a primary, multi-device portal to the digital and IOT worlds, and as independent, specialist voice assistants take their place next to general purpose platforms. The Open Voice Network will achieve its vision through the communal development and adoption of industry standards and usage guidelines, industry education and advocacy initiatives, and the development and documentation of voice-centric value propositions. As a directed fund of The Linux Foundation, OVON enjoys access to the expertise and shared legal, operational, and marketing services of The Linux Foundation, a world leader in the creation of open source projects and ecosystems.
