bio and added ability for eventInfoImageLink

--- a/site/content/events/vive2022.md
+++ b/site/content/events/vive2022.md
@@ -13,6 +13,7 @@ eventTitle: Voice & AI Technology Forum at ViVE 2022
 eventSubTitle: Sponsored by the Open Voice Network (OVON) and Intelligent Health Association (IHA)
 eventDescription: 'Join us on Wednesday, March 9th from 12:00 - 5:00 PM for Day Four of the ViVE 2022 event in Miami, Florida! Along with our co-sponsor, the Intelligent Health Association, the Open Voice Network will be hosting the “Voice & AI Technology Forum: The Case for Voice and Conversational AI for Improving Health and Wellness.” The increase in the adoption of voice assistant technology has resulted in enormous developments in the health and wellness industry, and we’re looking forward to speaking with industry thought leaders on the benefits and applications of voice assistance in health and wellness programs across the world. During the session, you will meet the authors of "Voice Technology in Healthcare: Leveraging Voice to Enhance Patient and Provider Experiences. Below you will find the full schedule of topics and presenters for this important day in two rapidly growing industries.'
 eventInfoImage: /img/open-voice-network-ovon-events-voice-and-ai-technology-forum-vive-2022-partner.png
+eventInfoImageLink: https://www.viveevent.com/register
 eventRegisterationUrl: (https://www.viveevent.com/register) to learn more and to register for ViVE 2022. **Use code "vive22_ovn150" for $150 off your registration.** Tickets are available for both in-person and virtual attendance.
 eventSessionsHeaderImage: /img/open-voice-network-ovon-events-voice-and-ai-technology-forum-vive-2022-schedule.png
 eventSessions:
@@ -78,7 +79,7 @@ eventParticipantBios:
     bio: Freddie leads a team of voice & conversational designers, architects, QA analysts, and researchers. He has been working in healthcare technology for over twenty years at companies like Merck, Sachs Group, Sg2, Solucient, Image Stream Medical/Olympus, and Prefix Health. He has worked on both the engineering and creative sides of various IVR and voice-assistant products and has a patent for a virtual call center system. Freddie has not only engineered recording for many IVRs & voice-assistants, but has also been the voice talent for several IVRs, audiobooks, and even a pinball machine. Freddie has owned an award-winning vocal-centric recording studio, VOCOMOTION Studios, for over twenty years and has produced over 130 albums for a cappella groups in ten countries. In October 2018, Freddie gave a moving & informative TEDx talk to a sold-out crowd at TEDxVienna about improving the quality of life for people living with neurodegenerative diseases like PD, MS, MD, and ALS and his patented assistive throat microphone system. He holds both a BS in Computer Engineering and a BMus in Vocal Performance from Northwestern University.
     photoUrl: /img/bio/freddie-feldman.jpg
   - name: Ginna Baik | Senior Living Alexa Smart Properties Leader, Amazon
-    bio: Ginna has had over a decade in senior care and technology with a mission to provide scalable technology and services to underserved populations. She has worked with a social platform startup to leading innovation and resident technology with a national senior care provider, and most recently building the senior care business practice at a national technology solution provider. With her new role at Amazon, she is leading Alexa smart properties business focused on senior living. Her experience includes the deployment of internet cafes at Atlanta Housing Authority properties, leading national resident tech strategy at Emeritus Senior Living (now Brookdale), and advising hundreds of leading senior care providers from life path communities to all levels of care. Ginna is an executive board member at America’s Society on Aging and the Chairman of the board at OATS (Older Adults Tech Services), an affiliate of AARP.
+    bio: Ginna Baik has had over a decade in senior care and technology with a mission to provide scalable technology and services to underserved populations. She has worked with a social platform startup leading innovation and resident technology with a national senior care provider, and most recently building the senior care business practice at a national technology solution provider. With her new role at Amazon, she is leading Alexa smart properties business focused on senior living. Her experience includes the deployment of internet cafes at Atlanta Housing Authority properties, leading national resident tech strategy at Emeritus Senior Living (now Brookdale), and advising hundreds of leading senior care providers from life path communities to all levels of care. Ginna is an executive board member at America’s Society on Aging and the Chairman of the board at OATS (Older Adults Tech Services), an affiliate of AARP. Ginna lives in sunny San Diego with her husband and two teenage children.
     photoUrl: /img/bio/ginna-baik.jpg
   - name: Harry P. Pappas | Founder & CEO, Intelligent Health Association
     bio: 'Pappas is a successful, High Tech. Serial entrepreneur with a strong focus on the health technology sector. He is a strong believer in applying technology to transform the health and wellness community in today’s “continuum of care." Pappas firmly believes that the world of digital health is being driven by the adoption of technology, and therefore drives the need for quality, ongoing education. Harry is an internationally recognized speaker and thought leader with auto-ID, BLE, NFC, RFID, RTLS, sensors, voice, robotics, wearables, AI, blockchain, and wireless technologies. Pappas is the Founder & CEO of the Intelligent Health Association, a global organization dedicated to helping educate members of the healthcare community on the adoption of new technologies that can improve patient care, patient outcomes, and patient safety while driving down the cost of healthcare. Harry is also an Ambassador in the Open Voice Network (OVON), overseeing their Health, Wellness, and Life Sciences Community. He is a long-term strategic player in the world of health technologies for the digital hospital and for today’s smart home. Harry’s goal: to help educate the healthcare community on an ongoing basis, so that it may adopt new technology that can have a dramatic impact on the delivery of improved health. His mantra: "Help Others, Do SOCIAL GOOD."'
