Update events “vive2022”

--- a/site/content/events/vive2022.md
+++ b/site/content/events/vive2022.md
@@ -4,7 +4,7 @@ listItemTitle: >-
   (OVON) and Intelligent Health Association (IHA)
 listItemImage: /img/open-voice-network-ovon-blog-join-the-open-voice-network-at-vive-2022.png
 date: 2022-02-07T19:37:19.844Z
-callToAction: Learn More
+callToAction: Learn More 2
 eventDate: 'March 9, 2022'
 presentersHeaderText: 'Presenters:'
 bioHeaderText: 'Presenters Bio:'
