--- a/site/content/events/vive2022.md
+++ b/site/content/events/vive2022.md
@@ -1,6 +1,6 @@
 ---
 listItemTitle: >-
-  1 Voice & AI Technology Forum at ViVE 2022—Sponsored by the Open Voice Network
+  Voice & AI Technology Forum at ViVE 2022—Sponsored by the Open Voice Network
   (OVON) and Intelligent Health Association (IHA)
 listItemImage: /img/open-voice-network-ovon-blog-join-the-open-voice-network-at-vive-2022.png
 date: 2022-02-07T19:37:19.844Z
