--- a/site/content/events/vive2022.md
+++ b/site/content/events/vive2022.md
@@ -14,7 +14,7 @@ eventSubTitle: Sponsored by the Open Voice Network (OVON) and Intelligent Health
 eventDescription: 'Join us on Wednesday, March 9th from 12:00 - 5:00 PM for Day Four of the ViVE 2022 event in Miami, Florida! Along with our co-sponsor, the Intelligent Health Association, the Open Voice Network will be hosting the “Voice & AI Technology Forum: The Case for Voice and Conversational AI for Improving Health and Wellness.” The increase in the adoption of voice assistant technology has resulted in enormous developments in the health and wellness industry, and we’re looking forward to speaking with industry thought leaders on the benefits and applications of voice assistance in health and wellness programs across the world. During the session, you will meet the authors of "Voice Technology in Healthcare: Leveraging Voice to Enhance Patient and Provider Experiences. Below you will find the full schedule of topics and presenters for this important day in two rapidly growing industries.'
 eventInfoImage: /img/open-voice-network-ovon-events-voice-and-ai-technology-forum-vive-2022-partner.png
 eventInfoImageLink: https://www.viveevent.com/register
-eventRegisterationUrl: (https://www.viveevent.com/register) to learn more and to register for ViVE 2022. **Use code "vive22_ovn150" for $150 off your registration.** Tickets are available for both in-person and virtual attendance.
+eventRegisterationUrl: (https://www.viveevent.com/register)
 eventSessionsHeaderImage: /img/open-voice-network-ovon-events-voice-and-ai-technology-forum-vive-2022-schedule.png
 eventSessions:
   - timeslot: 12:00 PM — 12:25 PM EST
