Update events “vive2022”

--- a/site/content/events/vive2022.md
+++ b/site/content/events/vive2022.md
@@ -24,8 +24,8 @@ eventDescription: >-
   industry, and we’re looking forward to speaking with industry thought leaders
   on the benefits and applications of voice assistance in health and wellness
   programs across the world. During the session, you will meet the authors of
-  <i>Voice Technology in Healthcare: Leveraging Voice to Enhance Patient and
-  Provider Experiences</i>. Below you will find the full schedule of topics and
+  "Voice Technology in Healthcare: Leveraging Voice to Enhance Patient and
+  Provider Experiences." Below you will find the full schedule of topics and
   presenters for this important day in two rapidly growing industries.
 eventInfoImage: >-
   /img/open-voice-network-ovon-events-voice-and-ai-technology-forum-vive-2022-partner.png
