--- a/site/content/webinars/vive2022.md
+++ b/site/content/webinars/vive2022.md
@@ -1,7 +1,7 @@
 ---
 endDate: 2022-04-01T05:00:00.000Z
 name: vive2022
-enabled: true
+enabled: false
 title: Vive 2022
 imageUrl: /img/open-voice-network-ovon-blog-join-the-open-voice-network-at-vive-2022.png
 callToAction: Learn More
